--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <li><a href="monitor.html">Monitor</a></li>
   <li><a href="myszka.html">Myszka</a></li>
   <li><a href="klawiatura.html">Klawiatura</a></li>
-  <li><a href="klawiatura.html">Słuchawki</a></li>
-  <li><a href="klawiatura.html">Podkładka</a></li>
-  <li><a href="klawiatura.html">Mouse Bungee</a></li>
+  <li><a href="słuchawki.html">Słuchawki</a></li>
+  <li><a href="podkładka.html">Podkładka</a></li>
+  <li><a href="mouse bungee.html">Mouse Bungee</a></li>
   </ul>
   </li>
   <li>Najpopularniejsze gry esportowe
