--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <li><a href="monitor.html">Monitor</a></li>
   <li><a href="myszka.html">Myszka</a></li>
   <li><a href="klawiatura.html">Klawiatura</a></li>
-  <li><a href="słuchawki.html">Słuchawki</a></li>
+  <li><a href="sluchawki.html">Słuchawki</a></li>
   <li><a href="podkładka.html">Podkładka</a></li>
   <li><a href="mouse bungee.html">Mouse Bungee</a></li>
   </ul>
