--- a/klawiatura.html
+++ b/klawiatura.html
@@ -13,8 +13,7 @@
  
   </head>
   <body>
-  <font color="white">
-  <font size="12px">
+  <font color="white" size="12px"></font>
   <center>
   <h1>HyperX Alloy FPS RGB Kailh Silver Speed</h1>
   </center>
