--- a/mouse bungee.html
+++ b/mouse bungee.html
@@ -13,8 +13,7 @@
  
   </head>
   <body>
-  <font color="white">
-  <font size="12px">
+  <font color="white" size="12px"></font>
   <center>
   <h1>BENQ Mouse bungee Camade II</h1>
   </center>
