--- a/podkładka.html
+++ b/podkładka.html
@@ -13,8 +13,7 @@
  
   </head>
   <body>
-  <font color="white">
-  <font size="12px">
+  <font color="white" size="12px"></font>
   <center>
   <h1>STEELSERIES QcK M-sized</h1>
   </center>
