--- a/strona2.html
+++ b/strona2.html
@@ -13,8 +13,7 @@
  
   </head>
   <body>
-  <font color="green">
-  <font size="12px">
+  <font color="green" size="12px"></font>
   Oleksandr Olegovich Kostyliev lub Aleksandr Olegovich Kostilev; urodzony 2 października 1997, lepiej znany jako s1mple, jest ukraińskim zawodowym graczem Counter-Strike: Global Offensive dla Natus Vincere. 
   Uważany jest za jednego z najlepszych graczy w historii Global Offensive.
   Obecnie zarobił $1,373,238.65
