--- a/klawiatura.html
+++ b/klawiatura.html
@@ -15,8 +15,9 @@
   <body>
   <font color="white" size="12px"></font>
   <center>
-  <h1>HyperX Alloy FPS RGB Kailh Silver Speed</h1>
-  </center>
+  <h1 color="white">HyperX Alloy FPS RGB Kailh Silver Speed</h1>
+  
+	 </center>
   
   <div id="klawiatura">
     <img src="klawa1.jpg" style="float: center">
