--- a/klawiatura.html
+++ b/klawiatura.html
@@ -19,7 +19,7 @@
    </center>
   
   <div id="klawiatura">
-    <img src="klawa1.jpg" style="float: center">
+    <img src="klawa.jpg" style="float: center">
 	</div>
   </body>
   </html>
