--- a/klawiatura.html
+++ b/klawiatura.html
@@ -13,11 +13,11 @@
  
   </head>
   <body>
-  <font color="white" size="12px"></font>
+  <font color="white" size="12px">
   <center>
   <h1 color="white">HyperX Alloy FPS RGB Kailh Silver Speed</h1>
    </center>
-  
+  </font>
   <div id="klawiatura">
     <img src="klawa.jpg" style="float: center">
 	</div>
