--- a/monitor.html
+++ b/monitor.html
@@ -13,10 +13,11 @@
  
   </head>
   <body>
-	  <font color="white" size="12px"></font>
+	  <font color="white" size="12px">
   <center>
-  <h1>AOC AGONAG251FZ</h1>
+  <h1 color="white">>AOC AGONAG251FZ</h1>
   </center>
+	  </font>
   
   <div id="monitor">
     <img src="monitor.jpg" style="float: center">
