--- a/mouse bungee.html
+++ b/mouse bungee.html
@@ -13,11 +13,11 @@
  
   </head>
   <body>
-  <font color="white" size="12px"></font>
+  <font color="white" size="12px">
   <center>
-  <h1>BENQ Mouse bungee Camade II</h1>
+  <h1 color="white">BENQ Mouse bungee Camade II</h1>
   </center>
-  
+	  </font>
   <div id="mouseb">
     <img src="uchwyt.jpg" style="float: center">
 	</div>
