--- a/myszka.html
+++ b/myszka.html
@@ -13,10 +13,11 @@
  
   </head>
   <body>
-  <font color="white" size="12px"></font>
+  <font color="white" size="12px">
   <center>
-  <h1>Razer Viper</h1>
+  <h1 color="white">Razer Viper</h1>
   </center>
+	  </font>
   
   <div id="myszka">
     <img src="mycha.jpg" style="float: center">
