--- a/podkładka.html
+++ b/podkładka.html
@@ -13,10 +13,11 @@
  
   </head>
   <body>
-  <font color="white" size="12px"></font>
+  <font color="white" size="12px">
   <center>
-  <h1>STEELSERIES QcK M-sized</h1>
+ <h1 color="white">STEELSERIES QcK M-sized</h1>
   </center>
+	  </font>
   
   <div id="podkładka">
     <img src="qck.jpg" style="float: center">
