--- a/sluchawki.html
+++ b/sluchawki.html
@@ -13,10 +13,11 @@
  
   </head>
   <body>
-  <font color="white" size="12px"></font>
+  <font color="white" size="12px">
   <center>
-  <h1>HyperX Cloud II</h1>
+  <h1 color="white">HyperX Cloud II</h1>
   </center>
+	  </font>
   
   <div id="słuchawki">
     <img src="hyperx1.jpg" style="float: center">
