--- a/monitor.html
+++ b/monitor.html
@@ -15,7 +15,7 @@
   <body>
 	  <font color="white" size="12px">
   <center>
-  <h1 color="white">>AOC AGONAG251FZ</h1>
+  <h1 color="white">AOC AGONAG251FZ</h1>
   </center>
 	  </font>
   
