--- a/strona2.html
+++ b/strona2.html
@@ -13,10 +13,11 @@
  
   </head>
   <body>
-  <font color="green" size="12px"></font>
+  <font color="green" size="12px">
   Oleksandr Olegovich Kostyliev lub Aleksandr Olegovich Kostilev; urodzony 2 października 1997, lepiej znany jako s1mple, jest ukraińskim zawodowym graczem Counter-Strike: Global Offensive dla Natus Vincere. 
   Uważany jest za jednego z najlepszych graczy w historii Global Offensive.
   Obecnie zarobił $1,373,238.65
+   </font>
 <div id="s1mple">
  
   <img src="csgos1mple.jpg" style="float: center">
