--- a/strona3.html
+++ b/strona3.html
@@ -13,10 +13,12 @@
  
   </head>
   <body>
- <font color="purple" size="12px"></font>
+ <font color="purple" size="12px">
   Lee „Faker” Sang-hyeok (kor. 이상혁, ur. 7 maja 1996 w Seulu) – południowokoreański profesjonalny gracz komputerowy w League of Legends, midlaner drużyny T1. 
   Trzykrotny mistrz świata (w 2013, 2015 i 2016 roku), finalista w 2017 roku oraz półfinalista w 2019 i 2021 roku. Przez wielu uważany za najlepszego gracza League of Legends w historii.
-<div id="faker">
+</font>
+  <div id="faker">
+ 
  
   <img src="faker.jpg" style="float: center">
   </div>
