--- a/strona4.html
+++ b/strona4.html
@@ -13,11 +13,12 @@
  
   </head>
   <body>
-  <font color="white" size="12px"></font>
+  <font color="white" size="12px">
 Jarosław Jarząbkowski, pseud. „pashaBiceps” (ur. 11 kwietnia 1988 w Nasielsku) – polski zawodowy gracz e-sportowy w grach serii Counter-Strike. 
 Były reprezentant takich formacji jak ESC Gaming, Universal Soldiers czy Virtus.pro.
 Obecnie zarobił $624,063.44
-<div id="pasha">
+</font>
+   <div id="pasha">
 
  
   <img src="pasha.jpg" style="float: center">
